--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,7 +16,7 @@
         <!-- SimpleLightbox plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="/static/css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -27,9 +27,16 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
                         <li class="nav-item"><a class="nav-link" href="/forex">Forex</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/forex">Indices</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/indices">Indices</a></li>
                         <li class="nav-item"><a class="nav-link" href="/forex">Comodities</a></li>
                         <li class="nav-item"><a class="nav-link" href="/contacto">Contacto</a></li>
+                         {% if current_user.is_anonymous %}
+                        <li class="nav-item"><a class="nav-link" href="/login">Ingresar</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/signup">Registrarse</a></li>
+                        {% else %}
+                        <li class="nav-item"><b>Bienvenido {{ current_user.name }}!</b></li>
+                        <li class="nav-item"><a class="nav-link" href="{{ url_for('logout') }}">Salir</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
@@ -57,6 +64,6 @@
         <!-- SimpleLightbox plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="/static/js/scripts.js"></script>
     </body>
 </html>
