--- a/app/templates/login_form.html
+++ b/app/templates/login_form.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<section class="hero-animated d-flex align-items-center" id="hero-animated">
-  <div class="container">
+ <section class="page-section">
+            <div class="container px-4 px-lg-5">
     <div class="row">
       <div class="col-md-12">
-        <h2>Ingreso de usuario</h2>
+         <h2 class="text-center mt-0">Ingresar</h2>
       </div>
     </div>
     <div class="row">
