--- a/app/templates/signup_form.html
+++ b/app/templates/signup_form.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-<section class="hero-animated d-flex align-items-center" id="hero-animated">
-  <div class="container">
+<section class="page-section">
+  <div class="container px-4 px-lg-5">
     <div class="row">
       <div class="col-md-12">
-        <h2>Registro de usuario</h2>
+         <h2 class="text-center mt-0">Registrarse</h2>
       </div>
     </div>
     <div class="row">
