--- a/app/templates/login_form.html
+++ b/app/templates/login_form.html
@@ -39,7 +39,7 @@
                 <div class="col-md-3"></div>
                 <div class="col-md-9">
                     {{ form.submit() }}
-                    <span>¿No tienes cuenta? <a href="{{ url_for('login') }}">Regístrate</a></span>
+                    <span>¿No tienes cuenta? <a href="{{ url_for('signup') }}">Regístrate</a></span>
                 </div>
             </div>
         </form>
