--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,9 +26,9 @@
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="/forex">Forex</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/indices">Indices</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/forex">Comodities</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/mercado-forex">Forex</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/mercado-indices">Indices</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/mercado-commodities">Commodities</a></li>
                         <li class="nav-item"><a class="nav-link" href="/contacto">Contacto</a></li>
                          {% if current_user.is_anonymous %}
                         <li class="nav-item"><a class="nav-link" href="/login">Ingresar</a></li>
