--- a/app/templates/detalle_activo.html
+++ b/app/templates/detalle_activo.html
@@ -4,7 +4,7 @@
         <!-- Services-->
         <section class="page-section" id="services">
             <div class="container px-12 px-lg-5">
-                <h2 class="text-center mt-0">{{ ticket.nombre }}</h2>
+                <h2 class="text-center mt-0">Análisis de estacionalidad del {{ ticket.nombre }}</h2>
                 <div>
                     <!-- Mostrar la imagen del gráfico -->
                     {{ grafico_5anios|safe }}
